--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -24,11 +24,74 @@ pre {
 h1,h2,h3,h4,h5 {
   margin: 20px 0 20px 0;
 }
+.divider {
+  background: #dd4814; 
+  color: #ebebeb; 
+  padding: 5px;
+  margin: 40px 0;
+}
+.divider h3 {
+  text-transform: uppercase;
+  font-size: 30px;
+}
 </style>
 
 <div class="post">
    {{{tute}}}
 <div>
 
+<div class="divider">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <h3>Author</h3>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <div class="row">
+
+        <img src="{{avatar}}" class="col-md-2 img-circle" />
+        <div class="col-md-10">
+        <h4>Thomas Davis</h4>
+        <p>Blah lots of stuff goes here</p>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="divider">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <h3>Comments</h3>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'cdnjstutorials';
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 <script>
 </script>
+</div>
+</div>
+</div>
