--- a/templates/library.html
+++ b/templates/library.html
@@ -47,8 +47,11 @@
           </table>
         </div>
       {{/selectedAssets}}
-      {{#tutorialsPresent}}
         <h3>Related Tutorials</h3>
+        
+
+            <p style="margin-bottom: 50px;">Do you think w3schools sucks? Do you think you could do a way better job? <br /> Now you can! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
+      {{#tutorialsPresent}}
             <table class="table table-hover" style="margin-top: 25px;">
                 <thead>
                     <tr>
