--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -103,22 +103,25 @@ p > code.hljs {
 <div class="container">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
+
+            <p style="margin-bottom: 50px;">Do you think w3schools sucks? Do you think you could do a way better job? <br /> Now you can! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
             <table class="table table-hover" style="margin-top: 25px;">
                 <thead>
                     <tr>
-                        <td>Tutorial</td>
+                        <td style="padding-left: 0;">Tutorial</td>
                         <td>Author</td>
                     </tr>
                 </thead>
                 <tbody>
                 {{#tutorials}}
                     <tr>
-                        <td><a href="/libraries/{{library}}/tutorials/{{slug}}">{{name}}</a></td>
+                        <td style="padding-left: 0;"><a href="/libraries/{{library}}/tutorials/{{slug}}">{{name}}</a></td>
                         <td><a href="{{author.homepage}}">{{author.name}}</a></td>
                     </tr>
                 {{/tutorials}}
                 </tbody>
             </table>
+
         </div>
     </div>
 </div>
