--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,10 @@
 <html class="no-js" lang="en">
 <!--<![endif]-->
   <head>
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
+    <link rel="dns-prefetch" href="//www.algolia.com" />
+    <link rel="dns-prefetch" href="//static.getclicky.com" />
+    <link rel="dns-prefetch" href="//www.google-analytics.com" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{title}}</title>
