--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
         <div class="col-md-12">
           <ul class="menu">
             <li class="logo"><a href="/">cdnjs</a></li>
-            <li><a href="https://github.com/cdnjs/cdnjs/issues/new?title=[New]%20Add">Add a lib</a></li>
+            <li><a href="https://github.com/cdnjs/cdnjs/issues/new?title=[New]%20Add%20_library_name_%20">Add a lib</a></li>
             <li><a href="https://gitter.im/cdnjs/cdnjs">Chat</a></li>
             <li><a href="https://www.cloudflare.com/network-map">Network</a></li>
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
