--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Lobster|Abel|Shadows+Into+Light|Pacifico|Orbitron);
+
 body {
   overflow-y: scroll;
 }
@@ -136,4 +138,56 @@ p#date{
 
 .version-dropdown {
   margin-top: 20px;
+}
+
+@media screen and (max-width: 768px) {
+     
+     .menu li {
+           width: 100%;
+           text-align: center;
+           padding-top: 20px;
+           background-color: #16a085;
+           font-size: 20px;
+           border-radius: 10px;
+     }
+
+     .menu li a {
+          color: white;
+          text-decoration: none;
+     }
+
+     .menu li a:hover {
+         color: #ecf0f1;
+     }
+
+     .menu li:nth-child(1) {
+         font-family: 'Abel', sans-serif;
+         font-size: 80px;
+         background-color: white;
+         border-radius: 0px;
+         padding: 0px;
+     }
+
+     .menu li.logo a {
+         color: #C0392B;
+     }
+
+     .menu li:nth-last-child(1) {
+         padding-bottom: 10px;
+     }
+
+     .container {
+         padding: 0px;
+         margin: 0px;
+     }
+
+     .container.home {
+         margin: 0px;
+         padding: 0px;
+     }
+     
+     #search-box {
+          min-height: 50px;
+          width: 100%;
+     }
 }
