--- a/templates/library.html
+++ b/templates/library.html
@@ -10,6 +10,11 @@
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
       <p><li class="label label-default label-highlight">{{library.autoupdateEnabled}}</li></p>
+      <p>
+      {{#licenses}}
+        <a href="{{url}}"  style="color: white !important;"><li class="label label-default label-highlight">{{type}} license</li></a>
+      {{/licenses}}
+      </p>
       <p>{{library.description}}</p>
       <em>{{library.keywords}}</em>
 
