--- a/templates/library.html
+++ b/templates/library.html
@@ -9,11 +9,11 @@
     <h1 style="margin-top: 00px;">{{library.name}}</h1>
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
-      <p><li class="label label-default label-highlight">{{library.autoupdateEnabled}}</li></p>
       <p>
-      {{#licenses}}
-        <li class="label label-default label-highlight"><a href="{{url}}">{{type}} license</a></li>
-      {{/licenses}}
+        <li class="label label-default label-highlight">{{library.autoupdateEnabled}}</li>
+        {{#licenses}}
+          <li class="label label-default label-highlight"><a href="{{url}}">{{type}} license</a></li>
+        {{/licenses}}
       </p>
       <p>{{library.description}}</p>
       <em>{{library.keywords}}</em>
