--- a/templates/library.html
+++ b/templates/library.html
@@ -10,6 +10,7 @@
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
       <p>
+        <li class="label label-default label-highlight"><a href="https://api.cdnjs.com/libraries/{{library.name}}">cdnjs api</a></li>
         <li class="label label-default label-highlight">{{library.autoupdateEnabled}}</li>
         {{#licenses}}
           <li class="label label-default label-highlight"><a href="{{url}}">{{type}} license</a></li>
